Fix infoWindow overflow

--- a/cta/static/cta/style.css
+++ b/cta/static/cta/style.css
@@ -16,5 +16,7 @@ html,body {
 	height: 20px;
 }
 div .infoWindow {
-	display:inline-block;
+	line-height:1.35;
+	overflow:hidden;
+	white-space:nowrap;
 }
